<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelPoids"
            android:text="@string/labelPoids"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="en kg"
            android:id="@+id/poids"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelTaille"
            android:text="@string/labelTaille"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/taille"
            android:layout_span="2"/>
    </TableRow>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/taille"
        android:id="@+id/group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/radio1"
            android:text="@string/radioMetre"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radio2"
            android:text="@string/radioCentimetre"/>
    </RadioGroup>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox"
        android:text="@string/checkbox"
        android:layout_below="@id/group"/>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:id="@+id/calcul"
            android:text="@string/calculButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:id="@+id/raz"
            android:text="@string/raz"
            android:layout_column="2"/>
    </TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultat"
        android:text="@string/resultat"
        android:layout_below="@id/raz"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/informations"
        android:text="@string/informations"
        android:layout_below="@+id/resultat"/>
</TableLayout>